[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://ui/components/track_selector.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/ui/icons/atlas/arrow_left.tres" id="2"]
[ext_resource type="Texture2D" path="res://assets/ui/icons/atlas/arrow_right.tres" id="3"]

[node name="TrackSelector" type="Control"]
custom_minimum_size = Vector2(0, 92)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="CollapsedPill" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 92)
layout_mode = 2
size_flags_horizontal = 3
text = "Track\nOff"

[node name="ExpandedPill" type="PanelContainer" parent="VBox"]
visible = false
custom_minimum_size = Vector2(0, 92)
layout_mode = 2
size_flags_horizontal = 3

[node name="ExpandedRow" type="HBoxContainer" parent="VBox/ExpandedPill"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 4
alignment = 1

[node name="LeftArrowButton" type="Button" parent="VBox/ExpandedPill/ExpandedRow"]
custom_minimum_size = Vector2(74, 92)
layout_mode = 2
icon = ExtResource("2")
icon_alignment = 1
expand_icon = true

[node name="NameToggleButton" type="Button" parent="VBox/ExpandedPill/ExpandedRow"]
custom_minimum_size = Vector2(0, 92)
layout_mode = 2
size_flags_horizontal = 3
text = ""

[node name="NameClip" type="Control" parent="VBox/ExpandedPill/ExpandedRow/NameToggleButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
clip_contents = true
mouse_filter = 2

[node name="MarqueeRoot" type="Control" parent="VBox/ExpandedPill/ExpandedRow/NameToggleButton/NameClip"]
layout_mode = 0

[node name="MarqueeRow" type="HBoxContainer" parent="VBox/ExpandedPill/ExpandedRow/NameToggleButton/NameClip/MarqueeRoot"]
layout_mode = 0
theme_override_constants/separation = 0

[node name="NameLabelA" type="Label" parent="VBox/ExpandedPill/ExpandedRow/NameToggleButton/NameClip/MarqueeRoot/MarqueeRow"]
layout_mode = 2
text = "Off"
vertical_alignment = 1

[node name="Gap" type="Control" parent="VBox/ExpandedPill/ExpandedRow/NameToggleButton/NameClip/MarqueeRoot/MarqueeRow"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="NameLabelB" type="Label" parent="VBox/ExpandedPill/ExpandedRow/NameToggleButton/NameClip/MarqueeRoot/MarqueeRow"]
layout_mode = 2
text = "Off"
vertical_alignment = 1

[node name="RightArrowButton" type="Button" parent="VBox/ExpandedPill/ExpandedRow"]
custom_minimum_size = Vector2(74, 92)
layout_mode = 2
icon = ExtResource("3")
icon_alignment = 1
expand_icon = true
